# img_stegano

./: .gitignore  CNAME  Cargo.toml  README.md  index.html
.github/: dependabot.yml
.github/workflows/: README.md  audit-cron.yaml  audit.yaml  ci.yml  deploy.yml  release.yml  web-app.yaml
assets/: img_stegano_wasm-7be077cc.js  img_stegano_wasm_bg-9860bb25.wasm  index-50af2dac.js
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: .gitignore  Cargo.toml  README.md
crates/core/src/: decode.rs  encode.rs  error.rs  lib.rs
crates/core/tests/: test_formats.rs  test_steganography.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
img_stegano_rs/: Cargo.toml
img_stegano_rs/src/: error.rs  lib.rs
img_stegano_rs/tests/: test_steganography.rs
img_stegano_wasm/: Cargo.toml
img_stegano_wasm/src/: lib.rs
scripts/: validate-ci.sh
src/: lib.rs
stegano-cli/: Cargo.toml
stegano-cli/src/: error.rs  main.rs
stegano-core/: Cargo.toml
stegano-core/src/: decode.rs  lib.rs
stegano-core/tests/: test_formats.rs  test_steganography.rs
stegano-wasm/: Cargo.toml
stegano-wasm/src/: lib.rs
tests/: test_steganography.rs
web-app/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
web-app/src/: App.tsx  index.css  main.tsx
web-app/src/components/: AboutModal.tsx  DecodePanel.tsx  DecodedResult.tsx  EncodePanel.tsx  EncodedResult.tsx  ErrorDisplay.tsx  FileDropzone.tsx  FileInfo.tsx  Footer.tsx  Header.tsx  Logo.tsx  ModeSelector.tsx  Nav.tsx
web-app/src/utils/: files.ts
