[package]
name = "img_stegano_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
img_stegano = { path = "../core" }
anyhow = "1.0.75"
thiserror = "2.0.0"
